eks-practice-materials/webapp-practice/sample/07_secret-manager/manifests/overlays/prod/webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: webapp
  labels:
    app: webapp
spec:
  replicas: 2
  template:
    spec:
      # FIXME: 作成した Service Account ( SecretManager が参照できる IAM Role が annotations に指定された sa ) に書き換えてください
      serviceAccountName: webapp-sa
      containers:
        - name: webapp-php
          image: 123456789012.dkr.ecr.ap-northeast-1.amazonaws.com/webapp-php:v1.0.0
          imagePullPolicy: Always
          volumeMounts:
            # base の volumeMounts の値を上書きするので php-sock が消えないようにこちらでも定義する
            - name: php-sock
              mountPath: /var/run/php
            # 本当はここだけ追加したい
            - name: secret-store
              mountPath: /var/secrets
              readOnly: true
        - name: webapp-nginx
          image: 123456789012.dkr.ecr.ap-northeast-1.amazonaws.com/webapp-nginx:v1.0.0
          imagePullPolicy: Always
      volumes:
        - name: secret-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              # 使用するSecretProviderClassの名前
              secretProviderClass: "webapp-secret-provider"
